// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rest renders 0 1`] = `
Array [
  .c0 {
  rest: 0;
}

<div
    className="c0"
  />,
  .c0 {
  rest: 0;
}

<div
    className="c0"
  />,
  .c0 {
  rest: 0;
}

<div
    className="c0"
  />,
  .c0 {
  rest: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`rest renders function 1`] = `
Array [
  .c0 {
  rest: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  rest: has;
}

<div
    className="c0"
  />,
  .c0 {
  rest: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  rest: has;
}

<div
    className="c0"
  />,
]
`;

exports[`rest renders invalid theme path 1`] = `
Array [
  .c0 {
  rest: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  rest: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  rest: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  rest: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`rest renders negative number 1`] = `
Array [
  .c0 {
  rest: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  rest: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  rest: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  rest: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`rest renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    rest: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rest: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rest: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    rest: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    rest: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rest: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rest: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    rest: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    rest: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rest: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rest: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    rest: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    rest: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rest: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    rest: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    rest: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rest renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    rest: July;
  }
}

@media April {
  .c0 {
    rest: August;
  }
}

@media January {
  .c0 {
    rest: September;
  }
}

@media April {
  .c0 {
    rest: November;
  }
}

@media June {
  .c0 {
    rest: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    rest: July;
  }
}

@media April {
  .c0 {
    rest: August;
  }
}

@media January {
  .c0 {
    rest: September;
  }
}

@media April {
  .c0 {
    rest: November;
  }
}

@media June {
  .c0 {
    rest: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    rest: January;
  }
}

@media April {
  .c0 {
    rest: December;
  }
}

@media January {
  .c0 {
    rest: April;
  }
}

@media April {
  .c0 {
    rest: May;
  }
}

@media June {
  .c0 {
    rest: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    rest: January;
  }
}

@media April {
  .c0 {
    rest: December;
  }
}

@media January {
  .c0 {
    rest: April;
  }
}

@media April {
  .c0 {
    rest: May;
  }
}

@media June {
  .c0 {
    rest: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rest renders postitive number 1`] = `
Array [
  .c0 {
  rest: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  rest: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  rest: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  rest: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`rest renders string 1`] = `
Array [
  .c0 {
  rest: July;
}

<div
    className="c0"
  />,
  .c0 {
  rest: July;
}

<div
    className="c0"
  />,
  .c0 {
  rest: June;
}

<div
    className="c0"
  />,
  .c0 {
  rest: June;
}

<div
    className="c0"
  />,
]
`;

exports[`rest renders valid theme path 1`] = `
Array [
  .c0 {
  rest: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  rest: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  rest: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  rest: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
